[gd_scene load_steps=21 format=3 uid="uid://crg0cr4a4h3in"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_wl4ff"]
[ext_resource type="Script" path="res://scripts/components/state_machine.gd" id="2_343o3"]
[ext_resource type="Texture2D" uid="uid://ddgb5cb4dhedu" path="res://assets/player/player.png" id="2_xbvgy"]
[ext_resource type="Script" path="res://scripts/components/aim_com.gd" id="2_yjskp"]
[ext_resource type="Script" path="res://scripts/components/hit_box.gd" id="3_pjfac"]
[ext_resource type="Script" path="res://scripts/components/pro_timer.gd" id="5_wfylf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wdhh2"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c21rk"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fvx33"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6vhdc"]
atlas = ExtResource("2_xbvgy")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qfd6"]
atlas = ExtResource("2_xbvgy")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe47j"]
atlas = ExtResource("2_xbvgy")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1011m"]
atlas = ExtResource("2_xbvgy")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5quwi"]
atlas = ExtResource("2_xbvgy")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8ob1"]
atlas = ExtResource("2_xbvgy")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdgop"]
atlas = ExtResource("2_xbvgy")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_56ry2"]
atlas = ExtResource("2_xbvgy")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfcae"]
atlas = ExtResource("2_xbvgy")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rghuo"]
atlas = ExtResource("2_xbvgy")
region = Rect2(48, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_lx2oy"]
animations = [{
"frames": [SubResource("AtlasTexture_6vhdc"), SubResource("AtlasTexture_6qfd6")],
"loop": true,
"name": &"attack_stitch",
"speed": 10.0
}, {
"frames": [SubResource("AtlasTexture_fe47j"), SubResource("AtlasTexture_1011m"), SubResource("AtlasTexture_5quwi"), SubResource("AtlasTexture_c8ob1")],
"loop": true,
"name": &"attack_stroke",
"speed": 10.0
}, {
"frames": [SubResource("AtlasTexture_fdgop"), SubResource("AtlasTexture_56ry2")],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [SubResource("AtlasTexture_qfcae"), SubResource("AtlasTexture_rghuo")],
"loop": true,
"name": &"run",
"speed": 4.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_wl4ff")

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_wdhh2")

[node name="MoveDirPointer" type="Line2D" parent="."]
points = PackedVector2Array(10, 0, 0, 0)
width = 2.0
default_color = Color(0, 0.105882, 1, 1)

[node name="LookDirPointer" type="Line2D" parent="."]
points = PackedVector2Array(10, 0, 0, 0)
width = 2.0
default_color = Color(0.14902, 1, 0, 1)

[node name="AimDirPointer" type="Line2D" parent="."]
points = PackedVector2Array(10, 0, 0, 0)
width = 2.0
default_color = Color(0.972549, 1, 0, 1)
script = ExtResource("2_yjskp")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("2_343o3")

[node name="AttackRay" type="RayCast2D" parent="."]

[node name="DebugState" type="Label" parent="."]
offset_left = -24.0
offset_top = -40.0
offset_right = 34.0
offset_bottom = -14.0
text = "<state>"

[node name="HitBoxStroke" type="Area2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("3_pjfac")

[node name="shape" type="CollisionShape2D" parent="HitBoxStroke"]
shape = SubResource("CircleShape2D_c21rk")

[node name="HitBoxStitch" type="Area2D" parent="."]
position = Vector2(0, -6)
script = ExtResource("3_pjfac")

[node name="shape" type="CollisionShape2D" parent="HitBoxStitch"]
shape = SubResource("CircleShape2D_fvx33")

[node name="NavAgent" type="NavigationAgent2D" parent="."]

[node name="anim_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
frames = SubResource("SpriteFrames_lx2oy")
animation = &"idle"
playing = true

[node name="StitchTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
script = ExtResource("5_wfylf")

[node name="StrokeTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
script = ExtResource("5_wfylf")
